crates/cli/tests/snapshots/cli__doctor__passes_once_the_index_is_consistent.snap
---
source: crates/cli/tests/cli.rs
expression: env.normalize(&stdout(&out))
---
OK    config       loaded from defaults
OK    notebook     notebook at [ROOT]/nb/home, not a git repository (no commits or sync)
OK    index        [ROOT]/nb/home/.index: index matches the files
WARN  ids          ids are positions in .index (6 tasks) and can change after 'nb index reconcile' or deletions
                   fix: refer to tasks by title in notes you keep outside tasq
WARN  nb           nb is not on PATH; the native bookkeeper keeps .index and commits
                   fix: install nb (https://github.com/xwmx/nb) to share the notebook with nb
OK    bookkeeper   bookkeeper: native
OK    git          git found at [ROOT]/bin/git
WARN  glow         glow is not on PATH
                   fix: install glow (https://github.com/charmbracelet/glow) for rendered `tasq view`
WARN  claude       claude is not on PATH
                   fix: install Claude Code for the claude launcher and the llm summarizer
WARN  direnv       direnv is not on PATH
                   fix: install direnv (https://direnv.net), or set launch.env = "inherit"
WARN  herdr        herdr is not on PATH
                   fix: install herdr to open sessions in herdr workspaces
WARN  glab         glab is not on PATH
                   fix: install glab (https://gitlab.com/gitlab-org/cli) to resolve GitLab merge request titles
WARN  gh           gh is not on PATH
                   fix: install gh (https://cli.github.com) to resolve GitHub pull request titles
